--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
 body {
     margin: 0;
-    padding: 0;
-    background-color: black;
+    display: grid;
+    place-items: center;
+    background-color: rgb(41, 41, 41);
 }
-canvas {
-    display: block;
+#paragraph {
+    /* transform: translate(0%, 120%); */
+    font-family: 'Courier New', Courier, monospace;
+    color: coral;
 }
